fix card bg color on dark mode

--- a/src/globals.css
+++ b/src/globals.css
@@ -148,12 +148,6 @@
   transform: translateY(20%);
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: light;
-  }
-}
-
 @media (min-width: 640px) {
   /* Swiper Styles */
   #best-selling .swiper .swiper-slide {
